--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="My very own personal website.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Résumé</title>
+    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
   </head>
   <body>
     ― Hello World! &#x1F609;
