fixed html validation errors (closes #17)

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                 <h3>ACHIEVEMENTS</h3>
                 <ul class = "timeline">
                   <li class="details">
-                    <input type="checkbox" id="other">
-                    <label for="other" class="summary">I'm proud of this things</label>
+                    <input type="checkbox" id="achivements">
+                    <label for="achivements" class="summary">I'm proud of this things</label>
                     <div>
                     <ul>
                       <li>#1 in <strong>"Top 25 Street Fighter Characters"</strong> by IGN, who also called me "fancy", "icon" and "a testament to the virtue of simplicity"</li>
@@ -181,9 +181,9 @@
                 <section>
                   <h3>Languages</h3>
                   <p class="tags small">
-                  <span class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span>
-                  <span class="language" lang="cn">&#x1F1E8;&#x1F1F3; MANDARIN</span>
-                  <span class="language" lang="jp">&#x1F1EF;&#x1F1F5; JAPANESE</span>
+                  <span hreflang="en" rel="alternate" class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span>
+                  <span hreflang="zh" rel="alternate" class="language" lang="zh">&#x1F1E8;&#x1F1F3; MANDARIN</span>
+                  <span hreflang="ja" rel="alternate" class="language" lang="ja">&#x1F1EF;&#x1F1F5; JAPANESE</span>
                   </p>
                 </section>
                 <section>
