--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                 <section>
                   <h3>Languages</h3>
                   <p class="tags small">
-                  <span hreflang="en" rel="alternate" class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span>
-                  <span hreflang="zh" rel="alternate" class="language" lang="zh">&#x1F1E8;&#x1F1F3; MANDARIN</span>
-                  <span hreflang="ja" rel="alternate" class="language" lang="ja">&#x1F1EF;&#x1F1F5; JAPANESE</span>
+                    <a hreflang="en" rel="alternate" class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</a>
+                    <a hreflang="zh" rel="alternate" class="language" lang="zh">&#x1F1E8;&#x1F1F3; MANDARIN</a>
+                    <a hreflang="ja" rel="alternate" class="language" lang="ja">&#x1F1EF;&#x1F1F5; JAPANESE</a>
                   </p>
                 </section>
                 <section>
