edited styles for profiling picture (closes #21)

--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Résumé</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
+    <link rel="stylesheet" href="./assets/styles/media.css">
   </head>
   <body>
     <main>
       <article>
         <div class="page" style="border-color: midnightblue;">
           <div class="stackable grid">
-            <div class="row">
-              <div class="three wide center aligned column">
+            <div class="row" id="main-info">
+              <div class="four wide center aligned column">
                 <div class="avatar-wrapper">
-                  <object class="avatar" data="./assets/images/ryu_hoshi.jpg" role="img" aria-label="My profile picture"></object>
+                  <img class="avatar" src="./assets/images/ryu_hoshi.jpg" alt="My profile picture" />
                 </div>
               </div>
-              <div class="thirteen wide column">
+              <div class="twelve wide column">
                 <div class="stackable grid">
                   <div class="sixteen wide column">
                     <h1 class="name">Ryu Hoshi (リュウ Ryū)</h1>
@@ -63,7 +65,7 @@
                     <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <h2>Résumé</h2>
+                    <h2 class="resume-title">Résumé</h2>
                     <p>
                       &mdash; I do not compete with others, the only competition that challenges me is myself. As a fighter, friend and an employee I am known as contemplative, tortured and driven.
                     </p>
